<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            tools:context=".Activity.ProfileActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="@dimen/spacing_5"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prof_image2"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:layout_marginBottom="@dimen/spacing_8"
                    android:layout_gravity="center"
                    android:src="@drawable/juanda" />

            </LinearLayout>>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/spacing_10"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="cursive"
                    android:text="Miftah Juanda Batubara"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:gravity="end"
                        android:text="Pematangsiantar"
                        android:textColor="@color/fontColor"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/lightgrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:gravity="start"
                        android:text="Android Developer"
                        android:textColor="@color/fontColor"
                        android:textSize="14sp" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="miftahjuanda06@gmail.com"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="10dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="start"
                    android:text="@string/lorem"
                    android:textColor="@color/fontColor2"
                    android:textSize="14sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightgrey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:id="@+id/follow_2"
                    android:drawableStart="@drawable/instagram"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/ig"
                    android:textColor="@color/instaAccent"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:id="@+id/message_2"
                    android:drawableStart="@drawable/facebook"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/fb"
                    android:textColor="@color/instaAccent"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:text="Education"
                    android:textColor="@color/fontColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="start"
                    android:text="@string/ipsum"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:text="Experience"
                    android:textColor="@color/fontColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="start"
                    android:text="@string/lorem_experience"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>