<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/spacing_5"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_5"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="Horden"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/detail_spesifikasi"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="Spesifikasi"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/white" />
        </LinearLayout>
            <View
                android:layout_width="@dimen/spacing_15"
                android:layout_height="@dimen/spacing_10" />

            <TextView
                android:id="@+id/detail_harga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="58dp"
                android:textStyle="bold"
                android:gravity="center_vertical|end"
                android:text="Rp xxx.xxx"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:tint="@color/fontColor2"
                    app:srcCompat="@drawable/ic_label" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fitur"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/fontColor" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/bt_toggle_description"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/fontColor2"
                    app:srcCompat="@drawable/ic_expand" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_expand_fitur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_10"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginLeft="?attr/actionBarSize"
                android:layout_marginRight="@dimen/spacing_smlarge"
                android:layout_marginStart="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_5"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_expand_fitur"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/large_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_20" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        android:tint="@color/fontColor2"
                        app:srcCompat="@drawable/ic_label" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kelebihan"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/fontColor" />

                    <View
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/bt_toggle_kelebihan"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:tint="@color/fontColor2"
                        app:srcCompat="@drawable/ic_expand" />

                </LinearLayout>
            <LinearLayout
                    android:id="@+id/lyt_expand_kelebihan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_10"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/spacing_large"
                    android:paddingTop="@dimen/spacing_5"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_expand_kelebihan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/large_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:tint="@color/fontColor2"
                    app:srcCompat="@drawable/ic_label" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ukuran_bahan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/fontColor" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/bt_toggle_ukuranbahan"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/fontColor2"
                    app:srcCompat="@drawable/ic_expand" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyt_expand_ukuranbahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_10"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginLeft="?attr/actionBarSize"
                android:layout_marginRight="@dimen/spacing_smlarge"
                android:layout_marginStart="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_5"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ukuran"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <TextView
                    android:id="@+id/tv_expand_ukuran"
                    android:layout_marginTop="@dimen/spacing_5"
                    android:layout_marginLeft="@dimen/spacing_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/large_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:layout_weight="1"
                    android:text="@string/bahan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <TextView
                    android:id="@+id/tv_expand_bahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_5"
                    android:layout_marginLeft="@dimen/spacing_10"
                    android:layout_weight="1"
                    android:text="@string/large_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_20" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>